- Removed unused - Corrected wording transfer mode

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -187,7 +187,7 @@ dialog.create_edit_profile.edit_button.key=E
 dialog.create_edit_profile.edit_button.name=Edit
 dialog.create_edit_profile.every_day=Every day
 dialog.create_edit_profile.hour_day_sync=Hour / day of synchronization
-dialog.create_edit_profile.profile_name=Profile name
+dialog.create_edit_profile.profile_name=Mode name
 dialog.create_edit_profile.regular_sync=Regular synchronization
 dialog.create_edit_profile.sync_deletion_with_friends=Synchronize deletion with friends
 dialog.create_edit_profile.sync_deletion_with_others=Synchronize deletion with others
@@ -400,7 +400,7 @@ folderexception.dialog.text=Unable to join PowerFolder '{0}'.\nReason\: {1}
 folderexception.dialog.title=Problem with PowerFolder '{0}'
 
 folderinfo.header=Folder Details
-folderinfo.syncprofile=Sync profile
+folderinfo.syncprofile=Transfer mode
 folderinfo.totalsync=Total sync
 
 folderjoin.description=Join this PowerFolder
@@ -634,10 +634,6 @@ linespeed.lan1000=LAN 1000mbit/s
 linespeed.unlimited=Unlimited
 linespeed.uploadspeed=Upload limit
 
-linktoclipboard.description=Copies a clickable PowerFolder link to the clipboard, use to enable people to join this folder and download this file
-linktoclipboard.key=c
-linktoclipboard.name=Copy PowerFolder link to Clipboard
-
 loadinvitation.title=Join a folder from an invitation file
 
 lowmemory.configure_failure=PowerFolder was unable to configure additional memory.\nPlease contact PowerFolder Support for advice.
@@ -789,7 +785,7 @@ preferences.dialog.dialogs.ask_to_add_friend_message=Ask to add personal message
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to friends if a node becomes a member of a folder
 preferences.dialog.dialogs.check_for_program_updates=Check for PowerFolder program updates
 preferences.dialog.dialogs.title=Dialogs
-preferences.dialog.dialogs.warn_on_duplicate_folders=Warn if changing a profile for multiple folders
+preferences.dialog.dialogs.warn_on_duplicate_folders=Warn if changing a transfer mode for multiple folders
 preferences.dialog.dialogs.warnoncloseifnotinsync=Warn on close of program if a folder is still synchronizing
 preferences.dialog.dialogs.warnonlimitedconnectivity=Warn on limited connectivity (No incomming connections)
 preferences.dialog.dialogs.warnonlowmemory=Warn on low available memory
@@ -1053,10 +1049,6 @@ requestfilelist.description=Refreshes the file list of that folder from remote u
 requestfilelist.key=f
 requestfilelist.name=Request new File list
 
-requestnetfolderlist.description=Refreshes the list of public folders
-requestnetfolderlist.key=r
-requestnetfolderlist.name=Refresh List
-
 restore.busy.description=Moving files from the PowerFolder recycle bin to your folder
 restore.busy.title=Restoring file(s)
 
@@ -1149,8 +1141,8 @@ sync_folder_rights.name=Preview all folders
 synchronisation.notice.title=Activated transfer mode {0}
 synchronisation.warning.automatic_deletions=This mode will also synchronize file deletions\!\nContinue?
 synchronisation.warning.automatic_deletions_notice=This mode will also synchronize file deletions\!
-synchronisation.warning.explanation=You have selected synchronization profile '{0}' for folder {1}.
-synchronisation.warning.title=Activate synchronization profile {0} for {1}
+synchronisation.warning.explanation=You have selected transfer mode '{0}' for folder {1}.
+synchronisation.warning.title=Activate transfer mode {0} for {1}
 
 syncprofile.autodownload_friends.name=Auto-download friends
 syncprofile.automatic_download.name=Automatic download
