#1133 - Add Unmark as new file

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1221,6 +1221,10 @@ un_white_list.description=Removes a file definition to the ignore patterns
 un_white_list.key=R
 un_white_list.name=Remove from ignore patterns
 
+un_mark.description=Unmark as new file
+un_mark.key=K
+un_mark.name=Unmark File(s)
+
 upload_panel.auto_cleanup.description=Cleans up any uploads when they complete
 upload_panel.auto_cleanup.name=Auto-cleanup
 
@@ -1244,7 +1248,7 @@ white_list.description=Adds a file definition to the ignore patterns
 white_list.key=I
 white_list.name=Add to ignore patterns
 
-winutils.shortcut.description=This shortcut was placed here by PowerFolder                                                                                    
+winutils.shortcut.description=This shortcut was placed here by PowerFolder
 
 wizard.backup_panel.folder_backup_success=You successfully set up a folder backup\!\n
 wizard.backup_panel.pcsjoin=Other computers can join this folder now
