#1137 - FilterTextField hint text.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -267,11 +267,13 @@ enablesilentmode.name=Run Silently
 estimation.unknown=unknown
 
 file_filter_panel.deleted_and_previous_files=Deleted and recycled files
+file_filter_panel.filter_by_filename.hint=Filter by filename
+file_filter_panel.filter_by_filename.tooltip=Filter results by filename
 file_filter_panel.incoming_files_only=Incoming files only
 file_filter_panel.local_and_incoming=Local and incoming files
 file_filter_panel.local_files_only=Local files only
 file_filter_panel.new_files_only=New files only
-
+file_filter_panel.combo.tooltip=Select files to display
 file_info.recently_downloaded=Recently downloaded
 
 filecopier.progressdialog.text=Copy files...
@@ -339,8 +341,12 @@ files_tab.incoming=Incoming\: {0}
 files_tab.local=Local\: {0}
 files_tab.recycled=Recycled\: {0}
 
+files_tab.recursive_selection.tooltip=Flatten view of folder directory structure
+
 find_users_dialog.title=Find users
 
+find_users_panel.search_for_user.hint=Search for a user
+find_users_panel.search_for_user.tooltip=Enter three or more characters to search for a user
 find_users_panel.search_action.description=Search for a user
 find_users_panel.search_action.key=S
 find_users_panel.search_action.name=Search
