--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -373,6 +373,7 @@ folder_remove.dialog.button.name=Remove
 folder_remove.dialog.delete=Delete meta-data
 folder_remove.dialog.preview=Keep as preview
 folder_remove.dialog.remove_from_os=Remove from Online Storage
+folder_remove.dialog.remove_from_local=Remove local folder
 folder_remove.dialog.sync_warning=The PowerFolder is currently synchronizing\!
 folder_remove.dialog.text=Remove PowerFolder {0}?
 folder_remove.dialog.title=Remove PowerFolder {0}?
