--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1347,3 +1347,6 @@ wizard.whattodo.openonlinedocumentation=Open Online documentation
 wizard.whattodo.projectwork=Setup a synced project
 wizard.whattodo.synchronized_folder=Setup a synchronized folder
 wizard.whattodo.title=What do you want to do?
+
+
+wizard.send_invitations.send_by_mail.cc_me=Add me as CC recipient
