--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -163,7 +163,7 @@ dialog.alreadyrunning.warning=PowerFolder already running\n\nHint\: If you resta
 dialog.binderror=Unable to bind port\!
 dialog.binderror.option.exit=Exit PowerFolder
 dialog.binderror.option.ignore=Continue
-dialog.binderror.option.text=Unable to bind on specified port(s)\!\nAn bound port is required for PowerFolder to\nreceive incoming connections.
+dialog.binderror.option.text=Unable to bind on specified port(s)\!\nA bound port is required for PowerFolder to\nreceive incoming connections.
 dialog.binderror.option.title=Port binding error\!
 dialog.connect.connecting=Connecting
 dialog.connect.connecting_to=Connecting to {0}...
