refs #922 in program register

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -822,8 +822,8 @@ preferences.dialog.findPort.tooltip=<html>Forces PowerFolder to search for a fre
 preferences.dialog.general.title=General
 preferences.dialog.iplanlist=LAN IP List
 preferences.dialog.language=Language
-preferences.dialog.lanlinesettings=LAN connection speed
-preferences.dialog.linesettings=Internet connection speed
+preferences.dialog.lanlinesettings=LAN speed
+preferences.dialog.linesettings=Internet speed
 preferences.dialog.network.title=Network
 preferences.dialog.networkmode.lanonly=LAN only
 preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
@@ -955,9 +955,10 @@ pro.wizard.activation.order_now=Click here to order PowerFolder Pro
 pro.wizard.activation.please_purchase=Please purchase PowerFolder Pro to re-activate.
 pro.wizard.activation.pro_activation=PowerFolder Pro Activation
 pro.wizard.activation.recover_password=Recover password
-pro.wizard.activation.register_now=Register now
+pro.wizard.activation.register_why=Why do I need to register?
+pro.wizard.activation.register_now=Where can I register?
 pro.wizard.activation.register_now_trial_1=Free\: Register now for your 30-days trial of
-pro.wizard.activation.register_now_trial_2=PowerFolder Pro. PLUS\: 5 GB online space.
+pro.wizard.activation.register_now_trial_2=PowerFolder Pro.
 pro.wizard.activation.successful=Activation successful
 pro.wizard.activation.thanks_activation=Thank you for activating PowerFolder Pro.
 pro.wizard.activation.thanks_additional=Thank you for purchasing additional\nPowerFolder Pro licenses.
@@ -966,6 +967,11 @@ pro.wizard.activation.try_again=Try again
 pro.wizard.activation.unable_to_login=Unable to login. Email or password wrong?
 pro.wizard.activation.update_service_account=Update Service Account
 pro.wizard.activation.update_service_info=Automatically get the latest features and bugfixes.
+pro.wizard.activation.subscribe_newsletter=Subscribe to newsletter
+pro.wizard.activation.agree_gtcs=I agree to the General Terms and Conditions
+pro.wizard.activation.already_account=I'm already registerd
+pro.wizard.activation.password_confirm=Confirm password
+pro.wizard.activation.password_length=Password needs to be at least 6 characters long
 
 publicfolders.filter.show_empty_folders=Show empty folders
 publicfolders.lastModified=Last Modified\t
@@ -1265,6 +1271,7 @@ wizard.basicsetup.default_folder_name=Synchronized Files
 wizard.basicsetup.lanonly=LAN only
 wizard.basicsetup.networking=Connect to
 wizard.basicsetup.private=LAN and Internet
+wizard.basicsetup.trusted=Trusted only
 wizard.basicsetup.title=Basic Setup
 wizard.basicsetup.upload.text=Unlimited connection speed will allow an unlimited number of connections.
 wizard.basicsetup.upload.title=Unlimited connection speed
