--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -373,7 +373,7 @@ folder_remove.dialog.button.name=Remove
 folder_remove.dialog.delete=Delete meta-data
 folder_remove.dialog.preview=Keep as preview
 folder_remove.dialog.remove_from_os=Remove from Online Storage
-folder_remove.dialog.remove_from_local=Remove local folder
+folder_remove.dialog.remove_from_local=Stop to sync locally
 folder_remove.dialog.sync_warning=The PowerFolder is currently synchronizing\!
 folder_remove.dialog.text=Remove PowerFolder {0}?
 folder_remove.dialog.title=Remove PowerFolder {0}?
@@ -445,7 +445,7 @@ folderpanel.hometab.folder_not_empty.title=Folder not empty
 folderpanel.hometab.last_file_change_date=Date of last file change
 folderpanel.hometab.local_folder_location=Local folder location
 folderpanel.hometab.local_size=Local size
-folderpanel.hometab.move_content=Current folder contents can be moved to the new folder.
+folderpanel.hometab.move_content=Also move current folder contents?
 folderpanel.hometab.move_content.dont=Do Not Move Contents
 folderpanel.hometab.move_content.move=Move Contents
 folderpanel.hometab.move_content.title=Move folder contents
@@ -479,7 +479,6 @@ folderpanel.settingstab.edit_a_pattern.title=Edit ignore pattern
 folderpanel.settingstab.editbutton.description=Edit a pattern
 folderpanel.settingstab.editbutton.key=E
 folderpanel.settingstab.editbutton.name=Edit
-folderpanel.settingstab.ignore_pattern_type=Ignore pattern type
 folderpanel.settingstab.ignorepatterns=Ignore patterns
 folderpanel.settingstab.removebutton.description=Remove a pattern
 folderpanel.settingstab.removebutton.key=R
@@ -1236,7 +1235,7 @@ un_white_list.name=Remove from ignore patterns
 
 un_mark.description=Unmark as new file
 un_mark.key=K
-un_mark.name=Unmark File(s)
+un_mark.name=Unmark new file(s)
 
 upload_panel.auto_cleanup.description=Cleans up any uploads when they complete
 upload_panel.auto_cleanup.name=Auto-cleanup
