Added missing translation

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -929,6 +929,8 @@ pro.security.nokeyfound=No public key for {0} found in internal keystore.\nDo yo
 pro.security.possiblebreach=Possible security breach
 pro.security.secure=secure
 pro.security.securitysettings=Security Settings
+pro.wizard.activation.valid_from=Valid from
+pro.wizard.activation.valid_to=Valid to
 pro.wizard.activation.activating=Activating PowerFolder Pro
 pro.wizard.activation.choose_key_file=Choose License key file
 pro.wizard.activation.computers_allowed=Computers allowed\:
