Better wording in Setup wizard

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1348,12 +1348,12 @@ wizard.webservice.password=Password
 wizard.webservice.register=Register New Account
 wizard.webservice.username=Email
 wizard.whattodo.backup_folder=Backup a folder
-wizard.whattodo.custom_sync=Share a folder (customized)
-wizard.whattodo.hostwork=Host a folder
+wizard.whattodo.custom_sync=Advanced setup
+wizard.whattodo.hostwork=Share/Send a folder
 wizard.whattodo.load_invite=Open invitation file
 wizard.whattodo.openonlinedocumentation=Open Online documentation
 wizard.whattodo.projectwork=Setup a synced project
-wizard.whattodo.synchronized_folder=Setup a synchronized folder
+wizard.whattodo.synchronized_folder=Synchronize computer
 wizard.whattodo.title=What do you want to do?
 
 
