--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -682,7 +682,7 @@ myfolderstable.number_of_incoming_files=Incoming
 myfolderstable.number_of_local_files=\# Local
 myfolderstable.number_of_members={0} members
 myfolderstable.sync=Sync
-myfolderstable.syncprofile=Sync Profile
+myfolderstable.syncprofile=Transfer mode
 myfolderstable.total_size=Total Size
 
 navigationbuttons.back=Back
