--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -595,6 +595,9 @@ general.webservice=Online Storage
 general.wednesday=Wednesday
 general.what_is_this=What is this?
 general.yesterday=Yesterday
+general.search=Search
+general.close=Close
+general.close.key=C
 
 hide_preview.description=Preview folders will be removed from lists of folders
 hide_preview.key=H
