More explaining help text instead of example email

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1089,7 +1089,7 @@ select_invitation.message_text=Enter a message for the receiver
 select_invitation.text1=Invitation files are required to join a folder.
 select_invitation.text2=Never give out invitation files to untrusted people.
 
-send_invitation.example_email_address=email@domain.com
+send_invitation.example_email_address=Enter email of receipient
 send_invitation.multi_users=Multiple users selected
 send_invitation.no_users=No users selected
 send_invitation.select_user.text=Select user
