--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1354,7 +1354,7 @@ wizard.whattodo.backup_folder=Backup a folder
 wizard.whattodo.custom_sync=Advanced setup
 wizard.whattodo.hostwork=Share/Send a folder
 wizard.whattodo.load_invite=Open invitation file
-wizard.whattodo.openonlinedocumentation=Open Online documentation
+wizard.whattodo.openonlinedocumentation=Open online documentation
 wizard.whattodo.projectwork=Setup a synced project
 wizard.whattodo.synchronized_folder=Synchronize computer
 wizard.whattodo.title=What do you want to do?
