#1208 - Warning for non existent / no-write directories.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1282,6 +1282,8 @@ wizard.basicsetup.upload.title=Unlimited connection speed
 wizard.choose_location.select=Please select the directory
 wizard.choosedisklocation.calculating_directory_size=Calculating size of directory...
 wizard.choosedisklocation.directory_size=Directory size {0}
+wizard.choosedisklocation.directory_non_existent=WARNING: This directory does not exist
+wizard.choosedisklocation.directory_no_write=WARNING: This directory cannot be written to
 wizard.choosedisklocation.select=Select directory
 wizard.choosedisklocation.title=Disk location
 wizard.control.back=< Back
