#1196 - language chooser in basic setup.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1273,6 +1273,7 @@ wizard.basicsetup.computer_name=Name of this computer
 wizard.basicsetup.default_folder_name=Synchronized Files
 wizard.basicsetup.lanonly=LAN only
 wizard.basicsetup.networking=Connect to
+wizard.basic_setup.language_restart=Language (requires restart)
 wizard.basicsetup.private=LAN and Internet
 wizard.basicsetup.trusted=Trusted only
 wizard.basicsetup.title=Basic Setup
