--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -647,11 +647,11 @@ loadinvitation.title=Join a folder from an invitation file
 lowmemory.configure_failure=PowerFolder was unable to configure additional memory.\nPlease contact PowerFolder Support for advice.
 lowmemory.configure_success=Additional memory has been configured.\nPowerFolder must be restarted manually for this to take effect.
 lowmemory.do_nothing=Do Nothing
-lowmemory.dont_autodetect=Do not detect low memory
 lowmemory.increase=Increase Memory
 lowmemory.text=PowerFolder is running out of available memory.\n\nPowerFolder can attempt to increase the available memory.
 lowmemory.title=Low memory
-lowmemory.warn=PowerFolder is running out of available memory.\n\nPlease visit http\://wiki.powerfolder.com/wiki/ for advice on increasing available memory.
+low_memory.error.title=Out of memory
+low_memory.error.text=PowerFolder requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\nhttp\://wiki.powerfolder.com/wiki/Memory_configuration
 
 masternode.nobody=- nobody -
 
