#1188 - Dialog if bad initial directory.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -110,6 +110,10 @@ chatpanel.member_disconnected_at_time={0} disconnected at {1}
 chatpanel.member_joined_folder_at_time={0} joined folder at {1}
 chatpanel.member_left_folder_at_time={0} left folder at {1}
 
+choose_disk_location_panel.dir.title=Target directory
+choose_disk_location_panel.dir_no_exist.text=The specified target directory {0} does not exist.\nWould you like to locate this folder in the following directory?\n{1}
+choose_disk_location_panel.dir_no_write.text=The specified target directory {0} is not writable.\nWould you like to locate this folder in the following directory?\n{1}
+
 clear_completed_uploads.description=Clears the list of the recently completed uploads (Alt-3)
 clear_completed_uploads.key=c
 clear_completed_uploads.name=Cleanup
@@ -373,7 +377,7 @@ folder_remove.dialog.button.name=Remove
 folder_remove.dialog.delete=Delete meta-data
 folder_remove.dialog.preview=Keep as preview
 folder_remove.dialog.remove_from_os=Remove from Online Storage
-folder_remove.dialog.remove_from_local=Stop to sync locally
+folder_remove.dialog.remove_from_local=Stop synchronizing locally
 folder_remove.dialog.sync_warning=The PowerFolder is currently synchronizing\!
 folder_remove.dialog.text=Remove PowerFolder {0}?
 folder_remove.dialog.title=Remove PowerFolder {0}?
