--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -25,6 +25,7 @@ general.reject=Reject
 online_storage_change_account.name=Change
 online_storage_change_account.key=C
 online_storage_change_account.description=Changes the user that is currently logged into the Online Storage
+online_storage.connecting=Connecting to server
 
 
 abortcopy.description=Abort the copy process
