--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -194,6 +194,8 @@ dialog.create_edit_profile.every_day=Every day
 dialog.create_edit_profile.hour_day_sync=Hour / day of synchronization
 dialog.create_edit_profile.profile_name=Mode name
 dialog.create_edit_profile.regular_sync=Regular synchronization
+dialog.create_edit_profile.suggestNameTemplate0={0} (copy)
+dialog.create_edit_profile.suggestNameTemplateN={0} (copy {1})
 dialog.create_edit_profile.sync_deletion_with_friends=Synchronize deletion with friends
 dialog.create_edit_profile.sync_deletion_with_others=Synchronize deletion with others
 dialog.create_edit_profile.time_between_scans=(Maximum) time until change detection
