#820 - better translation names for letter A, refs #820

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -5,7 +5,7 @@
 
 small_logo.icon=icons/PowerFolder_32x32.gif
 startdownloads.icon=icons/Play.gif
-abortdownload.icon=icons/Abort.gif
+abort_download.icon=icons/Abort.gif
 clearcompleteddownloads.icon=icons/Clear.gif
 clear_completed_uploads.icon=icons/Clear.gif
 clearrecentdownloads.icon=icons/Clear.gif
@@ -19,13 +19,13 @@ clearrecentdownloads.icon=icons/Clear.gif
 #about.icon=icons/PowerFolder.gif
 #about.dialog.icon=icons/PowerFolder.gif
 #requestfilelist.icon=icons/FileList.gif
-#addfriend.icon=icons/Node.gif
-#addmodifierfriend.icon=icons/Node.gif
+#add_friend.icon=icons/Node.gif
+#add_modifier_friend.icon=icons/Node.gif
 #removefriend.icon=icons/Node_orange.gif
 #removemodifierfriend.icon=icons/Node_orange.gif
 #setmasternode.icon=icons/Node.gif
 showfileinfo.icon=icons/SendMessage.gif
-aborttransfer.icon=icons/Abort.gif
+abort_transfer.icon=icons/Abort.gif
 folders.icon=icons/Folders.gif
 folder_invalid.icon=icons/Folder_invalid.gif
 #openchat.icon=icons/Chat.gif
@@ -45,7 +45,7 @@ remove_from_recycle_bin.icon=icons/Delete.gif
 #white_list.icon=icons/WhiteList.gif
 #un_black_list.icon=icons/UnList.gif
 #un_white_list.icon=icons/UnList.gif
-abortcopy.icon=icons/Forbid.gif
+abort_copy.icon=icons/Forbid.gif
 showhidefiledetails.icon=icons/Properties.gif
 question.icon=icons/Question.gif
 
