#820 - better translation names for letters B and C, refs #820

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -6,7 +6,7 @@
 small_logo.icon=icons/PowerFolder_32x32.gif
 startdownloads.icon=icons/Play.gif
 abort_download.icon=icons/Abort.gif
-clearcompleteddownloads.icon=icons/Clear.gif
+clear_completed_downloads.icon=icons/Clear.gif
 clear_completed_uploads.icon=icons/Clear.gif
 clearrecentdownloads.icon=icons/Clear.gif
 #connect.icon=icons/Connect.gif
@@ -52,7 +52,7 @@ question.icon=icons/Question.gif
 # Toolbar icons
 wizard.icon=icons/toolbar/NewFolder-48.png
 search_user.icon=icons/toolbar/SearchUser-48.png
-buypro.icon=icons/toolbar/BuyNow.png
+buy_pro.icon=icons/toolbar/BuyNow.png
 new_folder.icon=icons/toolbar/NewFolder-48.png
 join_folder.icon=icons/toolbar/JoinFolder-48.png
 remove_folder.icon=icons/toolbar/LeaveFolder-48.png
